--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^24.1.0",
+    "firebase-functions-test": "^0.3.0",
+    "firebase-mock-functions": "^0.2.3",
     "htmlhint": "^0.14.0",
     "jest": "^26.4.2",
+    "mocha": "^9.0.0",
+    "mock-cloud-firestore": "^0.12.0",
     "regenerator-runtime": "^0.13.1",
     "serve": "^11.0.2",
     "stylelint": "^13.6.1",
